@@ -13,6 +13,7 @@ djangorestframework==3.0.0
 #bitfield depend on nose
 nose==1.3.1
 django-bitfield==1.6.4
+BeautifulSoup==3.2.1
 #jsonfield depend on six
 six==1.6.1
 #jsonfield==0.9.20
