@@ -21,6 +21,8 @@ class SaleSupplier(models.Model):
     account_bank   = models.CharField(max_length=32,blank=True,verbose_name='汇款银行')
     account_no     = models.CharField(max_length=32,blank=True,verbose_name='汇款帐号')
     
+    memo   = models.TextField(max_length=1024,blank=True,verbose_name=u'备注')
+    
     created    = models.DateTimeField(auto_now_add=True,verbose_name=u'创建日期')
     modified   = models.DateTimeField(auto_now=True,verbose_name=u'修改日期')
 
@@ -90,7 +92,7 @@ class SaleProduct(models.Model):
     
     hot_value   = models.IntegerField(default=0,verbose_name=u'热度值')
     sale_price   = models.FloatField(default=0,verbose_name=u'采购价')
-    memo         = models.CharField(max_length=1024,blank=True,verbose_name=u'备注')
+    memo         = models.TextField(max_length=1024,blank=True,verbose_name=u'备注')
     
     status       = models.CharField(max_length=16,blank=True,
                                             choices=STATUS_CHOICES,default=WAIT,verbose_name=u'状态')
