@@ -9,33 +9,70 @@
 
 {% block container %}
 <div class="container">
-  <!-- <div class="navbar navbar-inverse">
-    <div class="nav-collapse" style="height: auto;">
-      <ul class="nav nav-tabs" role="tablist">
-	<li role="presentation" class="active"><a href="#">预审</a></li>
-	<li role="presentation"><a href="#">接洽</a></li>
-	<li role="presentation"><a href="#">终审</a></li>
-	<li role="presentation"><a href="#">排期</a></li>
-      </ul>
-    </div>
-  </div> -->
   {% csrf_token %}
   <div class="row">
   	<div class="col-md-6" style="text-align:left;display:inline;padding:0px;margin:0px;">
-  	<div class="page-header"><h2>{{ results.0.sale_supplier.supplier_name }}</h2></div>
+  		<div class="page-header"><h2>{{ results.0.sale_supplier.supplier_name }} 
+  			<a href="javascript:void(0);" onclick="slideToggle()" class="glyphicon glyphicon-pushpin"></a></h2>
+  		</div>
   	</div>
     <div class="col-md-6" style="text-align:right;display:inline;padding:0px;margin:0px;">
 	<ul class="nav nav-pills pagination pagination-lg">
 	  {% if previous %}
-	  <li><a href={{ previous }}><< 上一页</a></li>
+	  <li><a href="{{ previous }}">&lt;&lt; 上一页</a></li>
           {% endif %}
 	  {% if next %}
-	  <li><a href={{ next }}>下一页 >></a></li>
+	  <li><a href="{{ next }}">下一页 &gt;&gt;</a></li>
 	  {% endif %}
 	</ul>
-      </nav>
-    </div>
   </div>
+   </div>
+ <div class="panel panel-default supplier-info" style="display:none;">
+  <!-- Default panel contents -->
+  <div class="panel-heading">
+	 商家信息
+  </div>
+  <div class="panel-body">
+    <label>说明：</label><p>{{ results.0.sale_supplier.memo }} 
+    <a href="/admin/supplier/salesupplier/{{  results.0.sale_supplier.id }}/" class="btn btn-primary" style="display:inline;float:right;" onclick="return showAddAnotherPopup(this);">修改</a></p>
+    
+  </div>
+  <!-- List group -->
+  <ul class="list-group">
+    <li class="list-group-item">
+    	<div class="row">
+  		<div class="col-md-12" style="text-align:left;display:inline;">
+  		<label>品牌主页：</label>
+  		<a href="{{ results.0.sale_supplier.main_page }}">{{ results.0.sale_supplier.memo }} </a></div>
+  		</div>
+  	</li>
+    <li class="list-group-item">
+		<div class="row">
+  		<div class="col-md-6" style="text-align:left;display:inline;"><label>联系人：</label><span>{{ results.0.sale_supplier.contact }}</span></div>
+  		<div class="col-md-5" style="text-align:left;display:inline;"><label>传真：</label><span>{{ results.0.sale_supplier.fax }}</span></div>
+  		</div>
+	</li>
+    <li class="list-group-item">
+    	<div class="row">
+  		<div class="col-md-6" style="text-align:left;display:inline;"><label>固话：</label><span>{{ results.0.sale_supplier.phone }}</span></div>
+  		<div class="col-md-5" style="text-align:left;display:inline;"><label>手机：</label><span>{{ results.0.sale_supplier.mobile }}</span></div>
+  		</div>
+    </li>
+    <li class="list-group-item">
+    	<div class="row">
+  		<div class="col-md-6" style="text-align:left;display:inline;"><label>邮编：</label><span>{{ results.0.sale_supplier.zip_code }}</span></div>
+  		<div class="col-md-5" style="text-align:left;display:inline;"><label>邮箱：</label><span>{{ results.0.sale_supplier.email }}</span></div>
+  		</div>
+    </li>
+    <li class="list-group-item">
+    	<div class="row">
+  		<div class="col-md-12" ><label>地址：</label><span>{{ results.0.sale_supplier.address }}</span></div>
+  		</div>
+    </li>
+  </ul>
+</div>
+  
+
   <ul class="list-group">
     {% for record in results %}
     <li class="list-group-item" id="id-item-{{ record.id }}">
@@ -101,7 +138,9 @@
 
         $.ajax({url:url,data:data,success:callback,method:"post",headers:headers });
       };
-      
+	 function slideToggle(){ 
+      	$(".supplier-info").slideToggle(1000);
+      };
     </script>
 {% endblock %}
     
