@@ -1,274 +1,0 @@
-{% extends "temai_base.html" %}
-
-
-{% block title %}
-商品预审
-{% endblock %}
-
-{% block container %}
-<div class="container">
-  <ul class="list-group">
-    <li class="list-group-item">
-      <div class="row">
-	<div class="col-xs-4">
-	  <div class="thumbnail">
-	    <a href="http://shop.zhe800.com/products/ze141102095917000001/" target="_blank">
-	    <img src="http://z3.tuanimg.com/upload/deal/image/710689/bigger_webp_77b1a07ea985337279309bc26ea1d284.jpg">
-	    </a>
-	  </div>
-	</div>
-	<div class="col-xs-4">
-	  <p>韩版修身显瘦进口羊毛呢子大衣外套 春秋款 羊毛含量高达30%</p>
-	  <p>品牌/店：<font style="color:blue">贴美庄迪女装特卖店</font></p>
-	  <p>现价：<font style="color:red;font-size:20px">￥68</font></p>
-	  <p><del>原价：￥668</del></p>
-	  <p>平台：折800</p>
-	</div>
-	<div class="col-xs-4">
-	  <p>标签：</p>
-	  <select class="form-control input">
-	    <option value="0">女装</option>
-	    <option value="0">童装-外套</option>
-	    <option value="0">童装-裤子</option>
-	    <option value="0">童装-毛衣</option>
-	    <option value="0">童装-内衣</option>
-	  </select>
-	  <p style="margin-top:10px">审核结果：</p>
-	  <select class="form-control input">
-	    <option value="0">拒绝</option>
-	    <option value="0">通过</option>
-	  </select>
-	  <button type="button" class="btn btn-primary" style="margin-top:20px">确定</button>
-	</div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-	<div class="col-xs-4">
-	  <div class="thumbnail">
-	    <a href="http://shop.zhe800.com/products/ze141118124045000001" target="_blank">
-	    <img src="http://z3.tuanimg.com/upload/deal/image/709971/bigger_webp_0f9cbfd65f2e4db4ede20d9472ed4f2f.jpg">
-	    </a>
-	  </div>
-	</div>
-	<div class="col-xs-4">
-	  <p>2014秋冬男童毛衣中大童加绒保暖套头毛线衣针织打底衫线衫</p>
-	  <p>现价：<font style="color:red;font-size:20px">￥45</font></p>
-	  <p>品牌/店：<font style="color:blue">经典童话世界服饰特卖店</font></p>
-	  <p><del>原价：￥398</del></p>
-	  <p>平台：折800</p>
-	</div>
-	<div class="col-xs-4">
-	  <p>标签：</p>
-	  <select class="form-control input">
-	    <option value="0">女装</option>
-	    <option value="0">童装-外套</option>
-	    <option value="0">童装-裤子</option>
-	    <option value="0">童装-毛衣</option>
-	    <option value="0">童装-内衣</option>
-	  </select>
-	  <p style="margin-top:10px">审核结果：</p>
-	  <select class="form-control input">
-	    <option value="0">拒绝</option>
-	    <option value="0">通过</option>
-	  </select>
-	  <button type="button" class="btn btn-primary" style="margin-top:20px">确定</button>
-	</div>
-      </div>
-    </li>
-
-    <li class="list-group-item"></li>
-  </ul>
-
-  <div class="footer">
-    <p>© Uni Littles 2014</p>
-  </div>
-
-</div>
-
-{% endblock %}
-
-{% block tail_script %}
-    <script type="text/javascript">
-      var fields = ["#id_receiver_name", "#id_province", "#id_city", "#id_streetaddr"];
-
-      
-      function save2cookie(key) {
-        var val = $(key).val();
-        $.cookie(key, val);
-      }
-      function getfromcookie(key) {
-        return $.cookie(key);
-      }
-
-      $(function () {
-         fields.forEach(function(field) {
-           var val = getfromcookie(field);
-           if (val) {
-             $(field).val(val);
-           }
-         });
-      });
-
-      function validateMobile(s) {
-        var validateReg = /^((\+?86)|(\(\+86\)))?1\d{10}$/;
-        return validateReg.test(s);
-      };
-
-      function validateVerifyCode(s) {
-        var validateReg = /^\d{6}$/;
-        return validateReg.test(s);
-      };
-
-      var global_timer;
-      function updateTime() {
-        var btn = $("#id_requestcode_button");
-        time_left = parseInt(btn[0].innerHTML) - 1;
-        if (time_left <= 0) {
-          btn.attr("status","0");
-	  window.clearInterval(global_timer);
-          btn[0].innerHTML = "点击重发";
-	} else {
-          btn[0].innerHTML = time_left.toString();
-	}
-      };
-
-      function requestcode() {
-        var btn = $("#id_requestcode_button");
-        var status = btn.attr("status");
-        if (status == "1" || status == "2") {
-          return;
-        }
-
-        var mobile = $("#id_mobile_input").val();
-        if (validateMobile(mobile) == false) {
-          return;
-        }
-
-        btn.attr("status","1");
-	btn[0].innerHTML = "180";
-        global_timer = window.setInterval(updateTime, 1000);
-
-	var openid = $("#id_openid").val();
-        var url = "/weixin/requestcode/";
-	var data = {"mobile":mobile, "openid":openid};
-
-        var callback = function (res) {
-	  if (res["code"] == "wait") {
-            $("#id_verify_msg")[0].innerHTML = "请先耐心等待180秒哦！";
-            return;
-          } 
-
-          if (res["code"] != "good") {
-	    btn.attr("status","0");
-	    window.clearInterval(global_timer);
-          }
-
-	  //if (res["code"] == "good") {
-          //  $("#id_code_input").val(res["verifycode"]);
-          //  $("#id_verify_msg")[0].innerHTML = "验证码已自动分配填写，请点击验证即可！";
-          //  return; 
-	  //}
-	  if (res["code"] == "locked") {
-            $("#id_verify_msg")[0].innerHTML = "验证次数达到上限，请联系微信客服处理！";
-            btn[0].innerHTML = "已达上限";
-            btn[0].innerHTML = "成功发送";
-            return;
-          } 
-	  if (res["code"] == "anony") {
-            $("#id_verify_msg")[0].innerHTML = "请从优尼世界微信登录此页面！";
-            btn[0].innerHTML = "登录有误";
-            return;
-          } 
-	  if (res["code"] == "bad") {
-            $("#id_verify_msg")[0].innerHTML = "请输入正确的手机号码！";
-            btn[0].innerHTML = "点击重发";
-            return;
-          } 
-	  if (res["code"] == "dup") {
-            $("#id_verify_msg")[0].innerHTML = "此号码已被他人验证，请重新输入！";
-            btn[0].innerHTML = "点击重发";
-            return;
-          } 
-
-        };
-        
-        $.ajax({url:url, data:data, success:callback});
-      };
-
-      function verifycode() {
-        var verifycode = $("#id_code_input").val();
-        if (validateVerifyCode(verifycode) == false) {
-          $("#id_verify_msg")[0].innerHTML = "验证码错误！";
-          return;
-        }
-        var url = "/weixin/verifycode/";
-        var callback = function (res) {
-          if (res["code"] == "bad") {
-            $("#id_verifycode_button")[0].innerHTML = "验证失败，刷新再试";
-            return;
-          }
-
-	  window.clearInterval(global_timer);
-          $("#id_verifycode_group").css("display","none");
-          $("#id_requestcode_button").removeClass("btn-primary").addClass("btn-success")[0].innerHTML="已验证";
-          $("#id_mobile_input").attr("disabled","disabled");
-          $("#id_requestcode_button").attr("status", "2");
-        };
-        var openid = $("#id_openid").val();
-	var data = {"verifycode":verifycode, "openid":openid};
-        $.ajax({url:url, data:data, success:callback});
-      };
-      
-
-      function babyinfo() {
-	fields.forEach(function (field) {
-          save2cookie(field);
-        });
-
-        if ($("#id_requestcode_button").attr("status") != "2") {
-          $("#id_savelabel")[0].innerHTML = "请先验证手机号！";
-          return false;
-        }
-        var year = $("#id_year").val(); 
-        var month = $("#id_month").val();
-        var sex = $("#id_sex").val();
-        var receiver_name = $("#id_receiver_name").val();
-        var province = $("#id_province").val();
-        var city = $("#id_city").val();
-        var streetaddr = $("#id_streetaddr").val();
-
-        if (year == "0" || month == "0" || sex == "0") {
-          $("#id_savelabel")[0].innerHTML = "年月或性别选择错误！！";
-          return false;
-        }
-        if (receiver_name.length < 2 || province.length < 2 || city.length < 2 || streetaddr.length < 4) {
-          $("#id_savelabel")[0].innerHTML = "输入信息错误,请仔细检查提交！";
-          return false;												 
-        }
-        {% if from_page == "freesamples" %}
-        return true;
-        {% else %}
-        var csrf_token = document.getElementsByName("csrfmiddlewaretoken")[0].value;
-        var openid = $("#id_openid").val();
-        var url = "/weixin/babyinfo/";
-        var data = {"year":year, "month":month, "sex":sex, 
-                    "receiver_name":receiver_name, "province":province,
-                    "city":city, "streetaddr":streetaddr, "openid":openid,
-                    "csrfmiddlewaretoken":csrf_token};
-        var callback = function (res) {
-          if (res["code"] == "ok") {
-            $("#id_savebutton").css("display", "none");
-            $("#id_savelabel")[0].innerHTML = "信息已成功保存！";
-          }
-        };
-        
-        $.ajax({url:url, data:data, type:"post", success:callback});
-        {% endif %}
-      }
-
-    
-    </script>
-    <script src="{{ STATIC_URL }}jquery/jquery.cookie.js" type="text/javascript"></script>
-{% endblock %}
-    
